--- a/index.html
+++ b/index.html
@@ -324,21 +324,96 @@
                 <h2 class="faq__subtitle">You have Questions?</h2>
                 <p class="faq__description">And we have got answers to all of them. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             </div>
-            <div class="faq__prompts">
-                <ul class="faq__questions">
-                    <li class="faq__question">Are all the templates easily customizable?</li>
-                    <p class="faq__answers">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel tempora quam quo aperiam deserunt magnam ut est, vitae dolore, commodi quidem doloribus, impedit velit repellat?</p>
-                    <li class="faq__question">How long do you usually support an standalone template for?</li>
-                    <p class="faq__answers">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel tempora quam quo aperiam deserunt magnam ut est, vitae dolore, commodi quidem doloribus, impedit velit repellat?</p>
-                    <li class="faq__question">What kind of payment methods do you accept?</li>
-                    <p class="faq__answers">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel tempora quam quo aperiam deserunt magnam ut est, vitae dolore, commodi quidem doloribus, impedit velit repellat?</p>
-                    <li class="faq__question">Is there a subscribption service to get the latest templates</li>
-                    <p class="faq__answers">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel tempora quam quo aperiam deserunt magnam ut est, vitae dolore, commodi quidem doloribus, impedit velit repellat?</p>
-                    <li class="faq__question">Are the templates compatible with React?</li>
-                    <p class="faq__answers">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel tempora quam quo aperiam deserunt magnam ut est, vitae dolore, commodi quidem doloribus, impedit velit repellat?</p>
-                    <li class="faq__question">Do you really support Explorer 11?</li>
-                    <p class="faq__answers">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel tempora quam quo aperiam deserunt magnam ut est, vitae dolore, commodi quidem doloribus, impedit velit repellat?</p>
-                </ul>
+            <div class="accordion">
+                <div class="accordion-item" id="question1">
+                    <a class="accordion-link" href="#question1">
+                        Are all the templates easily customizable?
+                        <div class="positive">
+                            <i class="fa-solid fa-plus"></i>
+                        </div>
+                        <div class="minus">
+                            <i class="fa-solid fa-minus"></i>
+                        </div>
+                    </a>
+                    <div class="answer">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia et cumque minima recusandae nisi quam, nemo consequuntur, fugiat nesciunt similique fugit omnis sapiente nobis inventore?</p>
+                    </div>
+                </div>
+                <div class="accordion">
+                    <div class="accordion-item" id="question2">
+                        <a class="accordion-link" href="#question2">
+                            How long do you usually support an standalone template for?
+                            <div class="positive">
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                            <div class="minus">
+                                <i class="fa-solid fa-minus"></i>
+                            </div>
+                        </a>
+                        <div class="answer">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia et cumque minima recusandae nisi quam, nemo consequuntur, fugiat nesciunt similique fugit omnis sapiente nobis inventore?</p>
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <div class="accordion-item" id="question3">
+                            <a class="accordion-link" href="#question3">
+                                What kind of payment methods do you accept?
+                                <div class="positive">
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
+                                <div class="minus">
+                                    <i class="fa-solid fa-minus"></i>
+                                </div>
+                            </a>
+                            <div class="answer">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia et cumque minima recusandae nisi quam, nemo consequuntur, fugiat nesciunt similique fugit omnis sapiente nobis inventore?</p>
+                            </div>
+                        </div>
+                        <div class="accordion">
+                            <div class="accordion-item" id="question4">
+                                <a class="accordion-link" href="#question4">
+                                    Is there a subscribption service to get the latest templates
+                                    <div class="positive">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </div>
+                                    <div class="minus">
+                                        <i class="fa-solid fa-minus"></i>
+                                    </div>
+                                </a>
+                                <div class="answer">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia et cumque minima recusandae nisi quam, nemo consequuntur, fugiat nesciunt similique fugit omnis sapiente nobis inventore?</p>
+                                </div>
+                            </div>
+                            <div class="accordion">
+                                <div class="accordion-item" id="question5">
+                                    <a class="accordion-link" href="#question5">
+                                        Are the templates compatible with React?
+                                        <div class="positive">
+                                            <i class="fa-solid fa-plus"></i>
+                                        </div>
+                                        <div class="minus">
+                                            <i class="fa-solid fa-minus"></i>
+                                        </div>
+                                    </a>
+                                    <div class="answer">
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia et cumque minima recusandae nisi quam, nemo consequuntur, fugiat nesciunt similique fugit omnis sapiente nobis inventore?</p>
+                                    </div>
+                                </div>
+                                <div class="accordion">
+                                    <div class="accordion-item" id="question6">
+                                        <a class="accordion-link" href="#question6">
+                                            Do you really support Explorer 11?
+                                            <div class="positive">
+                                                <i class="fa-solid fa-plus"></i>
+                                            </div>
+                                            <div class="minus">
+                                                <i class="fa-solid fa-minus"></i>
+                                            </div>
+                                        </a>
+                                        <div class="answer">
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia et cumque minima recusandae nisi quam, nemo consequuntur, fugiat nesciunt similique fugit omnis sapiente nobis inventore?</p>
+                                        </div>
+                                    </div>
             </div>
             <div class="contact__container">
                 <h3 class="contact__title">Developers all over the world are happily using Treact</h3>
@@ -357,51 +432,51 @@
                 <h4 class="link__title">MAIN</h4>
                 <ul class="link__row">
                     <li class="link--click"><a href="">Blog</a></li>
-                    <li class="link--click"><a href="">Blog</a></li>
-                    <li class="link--click"><a href="">Blog</a></li>
-                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">FAQs</a></li>
+                    <li class="link--click"><a href="">Support</a></li>
+                    <li class="link--click"><a href="">About us</a></li>
                 </ul>
             </div>
             <div class="link">
-                <h4 class="link__title">MAIN</h4>
+                <h4 class="link__title">PRODUCT</h4>
                 <ul class="link__row">
-                    <li class="link--click"><a href="">Blog</a></li>
-                    <li class="link--click"><a href="">Blog</a></li>
-                    <li class="link--click"><a href="">Blog</a></li>
-                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Login</a></li>
+                    <li class="link--click"><a href="">Personal</a></li>
+                    <li class="link--click"><a href="">Business</a></li>
+                    <li class="link--click"><a href="">Team</a></li>
                 </ul>
             </div>
             <div class="link">
-                <h4 class="link__title">MAIN</h4>
+                <h4 class="link__title">PRESS</h4>
                 <ul class="link__row">
-                    <li class="link--click"><a href="">Blog</a></li>
-                    <li class="link--click"><a href="">Blog</a></li>
-                    <li class="link--click"><a href="">Blog</a></li>
-                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Logos</a></li>
+                    <li class="link--click"><a href="">Events</a></li>
+                    <li class="link--click"><a href="">Stories</a></li>
+                    <li class="link--click"><a href="">Offices</a></li>
                 </ul>
             </div>
             <div class="link">
-                <h4 class="link__title">MAIN</h4>
+                <h4 class="link__title">TEAM</h4>
                 <ul class="link__row">
-                    <li class="link--click"><a href="">Blog</a></li>
-                    <li class="link--click"><a href="">Blog</a></li>
-                    <li class="link--click"><a href="">Blog</a></li>
-                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Career</a></li>
+                    <li class="link--click"><a href="">Founders</a></li>
+                    <li class="link--click"><a href="">Culture</a></li>
+                    <li class="link--click"><a href="">Onboarding</a></li>
                 </ul>
             </div>
             <div class="link">
-                <h4 class="link__title">MAIN</h4>
+                <h4 class="link__title">LEGAL</h4>
                 <ul class="link__row">
-                    <li class="link--click"><a href="">Blog</a></li>
-                    <li class="link--click"><a href="">Blog</a></li>
-                    <li class="link--click"><a href="">Blog</a></li>
-                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">GDPR</a></li>
+                    <li class="link--click"><a href="">Privacy Policy</a></li>
+                    <li class="link--click"><a href="">Terms of Serive</a></li>
+                    <li class="link--click"><a href="">Disclaimer</a></li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="footer__info">
-        <img class="logo" src="assets/P.png" alt="">
+        <h2 class="logo">Logo</h2>
         <div class="footer__copyright">&copy; 2023 Practice Inc. All rights Reserved.</div>
             <div class="social__media--links">
                 <i class="fa-brands fa-facebook-f"></i>
