--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <div class="row">
                 <div class="nav__container">
-                    <h2 class="logo">Logo</h2>
+                    <h2 class="">Logo</h2>
                     <ul class="nav__links">
                         <li><a href="#" class="nav__link"></a>About</li>
                         <li><a href="#" class="nav__link"></a>Blog</li>
@@ -414,63 +414,64 @@
                                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia et cumque minima recusandae nisi quam, nemo consequuntur, fugiat nesciunt similique fugit omnis sapiente nobis inventore?</p>
                                         </div>
                                     </div>
-            </div>
-            <div class="contact__container">
-                <h3 class="contact__title">Developers all over the world are happily using Treact</h3>
-                <div class="contact__buttons">
-                    <button class="Start">Get Started</button>
-                    <button class="Contact">Contact Us</button>
-                </div>
-            </div>
-        </div>
-    </section>
-    </body>
+                                </div>
+                                <div class="contact__container">
+                                    <h3 class="contact__title">Developers all over the world are happily using Treact</h3>
+                                    <div class="contact__buttons">
+                                        <button class="Start">Get Started</button>
+                                        <button class="Contact">Contact Us</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </body>
+</div>
     <footer>
     <div class="row">
         <div class="links">
             <div class="link">
                 <h4 class="link__title">MAIN</h4>
                 <ul class="link__row">
-                    <li class="link--click"><a href="">Blog</a></li>
-                    <li class="link--click"><a href="">FAQs</a></li>
-                    <li class="link--click"><a href="">Support</a></li>
-                    <li class="link--click"><a href="">About us</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Blog</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">FAQs</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Support</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">About us</a></li>
                 </ul>
             </div>
             <div class="link">
                 <h4 class="link__title">PRODUCT</h4>
                 <ul class="link__row">
-                    <li class="link--click"><a href="">Login</a></li>
-                    <li class="link--click"><a href="">Personal</a></li>
-                    <li class="link--click"><a href="">Business</a></li>
-                    <li class="link--click"><a href="">Team</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Login</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Personal</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Business</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Team</a></li>
                 </ul>
             </div>
             <div class="link">
                 <h4 class="link__title">PRESS</h4>
                 <ul class="link__row">
-                    <li class="link--click"><a href="">Logos</a></li>
-                    <li class="link--click"><a href="">Events</a></li>
-                    <li class="link--click"><a href="">Stories</a></li>
-                    <li class="link--click"><a href="">Offices</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Logos</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Events</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Stories</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Offices</a></li>
                 </ul>
             </div>
             <div class="link">
                 <h4 class="link__title">TEAM</h4>
                 <ul class="link__row">
-                    <li class="link--click"><a href="">Career</a></li>
-                    <li class="link--click"><a href="">Founders</a></li>
-                    <li class="link--click"><a href="">Culture</a></li>
-                    <li class="link--click"><a href="">Onboarding</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Career</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Founders</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Culture</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Onboarding</a></li>
                 </ul>
             </div>
             <div class="link">
                 <h4 class="link__title">LEGAL</h4>
                 <ul class="link__row">
-                    <li class="link--click"><a href="">GDPR</a></li>
-                    <li class="link--click"><a href="">Privacy Policy</a></li>
-                    <li class="link--click"><a href="">Terms of Serive</a></li>
-                    <li class="link--click"><a href="">Disclaimer</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">GDPR</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Privacy Policy</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Terms of Serive</a></li>
+                    <li class="link--click"><a href="#" class="footer__link">Disclaimer</a></li>
                 </ul>
             </div>
         </div>
@@ -484,6 +485,5 @@
                 <i class="fa-brands fa-youtube"></i>
             </div>
     </div>
-</div>
 </footer>
 </html>
