Reconfigured heights & added font colors

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <nav>
             <div class="row">
                 <div class="nav__container">
-                    <h2 class="">Logo</h2>
+                    <h2 class="navy top">Logo</h2>
                     <ul class="nav__links">
                         <li><a href="#" class="nav__link"></a>About</li>
                         <li><a href="#" class="nav__link"></a>Blog</li>
-                        <li><a href="#" class="nav__link"></a>Pricing</li>
+                        <li><a href="#pricing" class="nav__link"></a>Pricing</li>
                         <li><a href="#" class="nav__link"></a>Contact Us</li>
                         <li><a href="#" class="nav__link nav__link--primary"></a>Login</li>
                         <li><a href="#" class="nav__link nav__link--primary signup">Register</a></li>
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="section__landing">
                 <div class="landing__description">
-                    <h2 class="landing__title">Beautiful React Templates for you.</h2>
+                    <h2 class="landing__title">Beautiful React Templates <span class="navy">for you.</span></h2>
                     <p class="landing__para">Our templates are easy to setup, understand and customize. Fully modulaar components with a variety of pages and components.</p>
                     <div class="landing__info">
                         <input class="email" type="text" placeholder="Your E-mail Address">
@@ -49,14 +49,14 @@
         <div class="row">
             <div class="feature__container">
                 <div class="feature__description">
-                    <h4 class="features">FEATURES</h4>
-                    <h1 class="features__header">We have Amazing Service.</h1>
+                    <h4 class="features navy">FEATURES</h4>
+                    <h1 class="features__header">We have Amazing <span class="navy">Services.</span></h1>
                     <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem minima eligendi delectus nostrum, atque cupiditate amet.</p>
                 </div>
                 <div class="services">
                     <div class="service">
                         <div class="service__img">
-                            <i class="fa-sharp fa-solid fa-bolt"></i>
+                            <span class="navy"><i class="fa-sharp fa-solid fa-bolt"></i></span>
                         </div>
                         <div class="service__description">
                             <h3 class="service__subtitle">Secure</h3>
@@ -65,7 +65,7 @@
                     </div>
                     <div class="service">
                         <div class="service__img">
-                            <i class="fa-sharp fa-solid fa-bolt"></i>
+                            <span class="navy"><i class="fa-sharp fa-solid fa-bolt"></i></span>
                         </div>
                         <div class="service__description">
                             <h3 class="service__subtitle">24/7 Support</h3>
@@ -74,7 +74,7 @@
                     </div>
                     <div class="service">
                         <div class="service__img">
-                            <i class="fa-sharp fa-solid fa-bolt"></i>
+                            <span class="navy"><i class="fa-sharp fa-solid fa-bolt"></i></span>
                         </div>
                         <div class="service__description">
                             <h3 class="service__subtitle">customizable</h3>
@@ -83,7 +83,7 @@
                     </div>
                     <div class="service">
                         <div class="service__img">
-                            <i class="fa-sharp fa-solid fa-bolt"></i>
+                            <span class="navy"><i class="fa-sharp fa-solid fa-bolt"></i></span>
                         </div>
                         <div class="service__description">
                             <h3 class="service__subtitle">Reliable</h3>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="service">
                         <div class="service__img">
-                            <i class="fa-sharp fa-solid fa-bolt"></i>
+                            <span class="navy"><i class="fa-sharp fa-solid fa-bolt"></i></span>
                         </div>
                         <div class="service__description">
                             <h3 class="service__subtitle">Fast</h3>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="service">
                         <div class="service__img">
-                            <i class="fa-sharp fa-solid fa-bolt"></i>
+                            <span class="navy"><i class="fa-sharp fa-solid fa-bolt"></i></span>
                         </div>
                         <div class="service__description">
                             <h3 class="service__subtitle">Easy</h3>
@@ -116,8 +116,8 @@
     <div class="row">
     <div class="qw__container">
         <div class="container">
-            <h3 class="qualitywork__title">QUALITY WORK</h3>
-            <h1 class="qualitywork__header">Designed & Developed by Professionals.</h1>
+            <h3 class="qualitywork__title"><span class="navy">QUALITY WORK</span></h3>
+            <h1 class="qualitywork__header">Designed & Developed by <span class="navy">Professionals.</span></h1>
             <p class="qualitywork__para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam facilis hic illo et nostrum sint quae quod voluptatum ipsum beatae, tempore quia. Commodi, iure?</p>
             <button class="learnmore">Learn More</button>
         </div>
@@ -134,9 +134,9 @@
             <img src="assets/steps.svg" alt="">
         </div>
         <div class="container">
-            <h3 class="step__title">STEPS</h3>
-            <h1 class="step__header">Easy to Get</h1>
-            <h1 class="step__header">Started.</h1>
+            <h3 class="step__title"><span class="navy">STEPS</span></h3>
+            <h1 class="step__header">Easy to <span class="navy">Get</span></h1>
+            <h1 class="step__header"><span class="navy">Started.</span></h1>
             <div class="step">
                 <h2 class="step__number">01</h2>
                 <div class="step__description">
@@ -147,14 +147,14 @@
             <div class="step">
                 <h2 class="step__number">02</h2>
                 <div class="step__description">
-                    <h3 class="step__subtitle">Register</h3>
+                    <h3 class="step__subtitle">Download</h3>
                     <p class="step__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus.</p>
                 </div>
             </div>
             <div class="step">
                 <h2 class="step__number">03</h2>
                 <div class="step__description">
-                    <h3 class="step__subtitle">Register</h3>
+                    <h3 class="step__subtitle">Run</h3>
                     <p class="step__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus.</p>
                 </div>
             </div>
@@ -165,24 +165,24 @@
     <section id="values">
         <div class="row">
             <div class="value__container">
-                <div class="container val__can">
-                    <h3 class="values__title">VALUES</h3>
-                    <h1 class="values__header">We Always Abide by Our Principles</h1>
+                <div class="val__can">
+                    <h3 class="values__title"><span class="navy">VALUES</span></h3>
+                    <h1 class="values__header">We Always Abide by Our <span class="navy">Principles</span></h1>
                     <p class="values__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit nesciunt assumenda quisquam eveniet iste corporis quis adipisci, esse veritatis, blanditiis et aut, rerum saepe? Consequuntur sint maiores cum reprehenderit hic quae vitae.</p>
                     <div class="v--container">
                         <div class="value__containers">
                             <div class="value__container--row">
-                                <i></i>
+                                <i class="fa-sharp fa-solid fa-bolt icon"></i>
                                 <h3 class="value__side">Affordable</h3>
-                                <p>We promise to offer you the best rate we can - at par with the industry standard.</p>
                             </div>
+                                <p>We promise to offer you the best rate we can - at par with the industry standard.</p>
                         </div>
                         <div class="value__containers">
                             <div class="value__container--row">
-                                <i></i>
-                                <h3>Professionalism</h3>
-                                <p>We assure you that our templates are desgined and created by professional desginers</p>
+                                <i class="fa-sharp fa-solid fa-bolt icon"></i>
+                                <h3 class="value__side">Professionalism</h3>
                             </div>
+                                <p>We assure you that our templates are desgined and created by professional desginers</p>
                         </div>
                     </div>
                     <button class="learnmore">Learn More</button>
@@ -197,8 +197,8 @@
         <div class="row">
             <div class="price__container">
                 <div class="pricing">
-                    <h3 class="price__title">PRICING</h3>
-                    <h1 class="price__header">Reasonable & Flexible Plans.</h1>
+                    <h3 class="price__title"><span class="navy">PRICING</span></h3>
+                    <h1 class="price__header">Reasonable & Flexible <span class="navy">Plans.</span></h1>
                     <p class="pricing__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt labore debitis earum iste nam laudantium quis dolor delectus quam quo!</p>
                 </div>
                 <div class="plans">
@@ -288,8 +288,8 @@
                         <img src="assets/connection.svg" alt="">
                     </div>
                     <div class="testimonal">
-                        <h3 class="testimonal__title">TESTIMONIALS</h3>
-                        <h1 class="testimonal__subtitle">Our Clients Love Us.</h1>
+                        <h3 class="testimonal__title"><span class="navy">TESTIMONIALS</span></h3>
+                        <h1 class="testimonal__subtitle">Our Clients <span class="navy">Love US.</span></h1>
                         <p class="testimonal__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure ipsa ratione fuga delectus earum eligendi recusandae odio similique dolor, quam sint sunt laboriosam aliquam!</p>
                         <div class="user">
                             <div class="user__rating">
@@ -320,8 +320,8 @@
     <section id="faqs">
         <div class="row">
             <div class="faq__container">
-                <h4 class="faq__title">FAQS</h4>
-                <h2 class="faq__subtitle">You have Questions?</h2>
+                <h4 class="faq__title"><span class="navy">FAQS</span></h4>
+                <h2 class="faq__subtitle">You have <span class="navy"> Questions?</span></h2>
                 <p class="faq__description">And we have got answers to all of them. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="accordion">
@@ -433,7 +433,7 @@
                 <h4 class="link__title">MAIN</h4>
                 <ul class="link__row">
                     <li class="link--click"><a href="#" class="footer__link">Blog</a></li>
-                    <li class="link--click"><a href="#" class="footer__link">FAQs</a></li>
+                    <li class="link--click"><a href="#faqs" class="footer__link">FAQs</a></li>
                     <li class="link--click"><a href="#" class="footer__link">Support</a></li>
                     <li class="link--click"><a href="#" class="footer__link">About us</a></li>
                 </ul>
